--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <table cellspacing="40">
             <tbody>
                 <td>
-                    <img src="my-profile-picture.jpg" style="border-radius: 50%; width: 200px; height: 200px" alt="">
+                    <img src="images/my-profile-picture.jpg" style="border-radius: 50%; width: 200px; height: 200px" alt="">
                 </td>
                 <td>
                     <h1>Nham Quoc Hung</h1>
