--- a/HTML - Personal Portfolio/index.html
+++ b/HTML - Personal Portfolio/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quoc Hung's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table cellspacing="40">
@@ -61,7 +62,7 @@
                     <td>Functional Programming 🌟🌟🌟🌟</td>
                 </tr>
                 <tr>
-                    <td>Python 🌟🌟</td>
+                    <td>Python 🌟🌟🌟</td>
                     <td>Javascript and Frameworks 🌟🌟</td>
                 </tr>
             </tbody>
@@ -72,4 +73,3 @@
         <a href="contact-me.html" alt="List of my hobbies">Contact Me</a>
     </body>
 </html>
-
