--- a/index.html
+++ b/index.html
@@ -1,75 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Quoc Hung's Personal Site</title>
-    </head>
-    <body>
-        <table cellspacing="40">
-            <tbody>
-                <td>
-                    <img src="images/my-profile-picture.jpg" style="border-radius: 50%; width: 200px; height: 200px" alt="">
-                </td>
-                <td>
-                    <h1>Nham Quoc Hung</h1>
-                    <p><em>Computer Science Undergraduate at </em><a href="http://www.nus.edu.sg/"><strong>National University of Singapore</strong></a>.</p>
-                    <p>I am a year 2 CS student interested in Web Development. I am introverted and carefree.</p>
-                </td>
-            </tbody>
-        </table>        
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nham Quoc Hung</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&family=Montserrat:ital@0;1&family=Sacramento&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <h1><em>I'm Hung.</em></h1>
+        <h2>a <span class="pro">pro</span>grammer</h2>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+          <img class="profile-img" src="images/my-profile-picture.jpg" alt="profile-img">
+          <h2>Hello.</h2>
+          <p>I am an aspiring Web Developer and Machine Learning Engineer. I like music 🎹 and a slow-paced life 🏕.</p>
+        </div>
         <hr>
-        <h3>Coursework and Self-taught</h3>
-        <ul>
-            <li>Software Engineering (CS2103 - Java)</li>
-            <li>Algorithms and Data Structures</li>
-            <li>Computer Networks</li>
-            <li>Operating System</li>
-            <li>Arduino Programming and Hardward</li>
-            <li>FreeCodeCamp Intro to Web Development</li>
-        </ul>
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="first-skill-img" src="images/coding.png" alt="coding-img">
+            <h3>Programming</h3>
+            <p>I recently started to learn programming 💻 in university. Over time, I have developed a passion for Web Development & Machine Learning.</p>
+          </div>
+          <div class="skill-row">
+            <img class="second-skill-img" src="images/music.png" alt="music-img">
+            <h3>Music</h3>
+            <p>I am interested in learning new instruments 🎸 on my own. Over time, I have been able to play a few songs on each instrument.</p>
+          </div>
+        </div>
         <hr>
-        <h3>Internship and Project Experience</h3>
-        <table cellspacing="10">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Position</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Dec-Mar 2019</td>
-                    <td>Interactive Wall Project for Tembusu College's Open Day</td>
-                </tr>
-                <tr>
-                    <td>Dec-Jan 2020</td>
-                    <td>The Fan Metric Start-up Project</td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
-        <h3>Skills</h3>
-        <table cellspacing="10">
-            <tbody>
-                <tr>
-                    <td>Java OOP 🌟🌟🌟🌟</td>
-                    <td>Java Data Structures 🌟🌟🌟🌟</td>
-                </tr>
-                <tr>
-                    <td>Software Engineering 🌟🌟🌟🌟</td>
-                    <td>Functional Programming 🌟🌟🌟🌟</td>
-                </tr>
-                <tr>
-                    <td>Python 🌟🌟</td>
-                    <td>Javascript and Frameworks 🌟🌟</td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
-        <a href="hobbies.html" alt="List of my hobbies">My Hobbies</a>
-        <br>
-        <a href="contact-me.html" alt="List of my hobbies">Contact Me</a>
-    </body>
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3 class="contact-service">For projects related to creating fullstack personalised websites.</h3>
+          <p>Or let's just make friends and share knowledge on coding together!</p>
+          <a class="btn" href="mailto:E0323236@u.nus.edu">CONTACT ME</a>
+        </div>
+      </div>
+      <div class="bottom-container">
+        <a class="footer-link" href="www.linkedin.com/in/quoc-hung-nham">LinkedIn</a>
+        <a class="footer-link" href="https://github.com/nhamhung">GitHub</a>
+        <a class="footer-link" href="https://nhamhung.github.io/CV/">Website</a>
+        <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+          & <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+        <p class="copyright">© 2020 Quoc Hung Nham.</p>
+      </div>
+</body>
 </html>
-
