--- a/index.html
+++ b/index.html
@@ -1,56 +1,258 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nham Quoc Hung</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&family=Montserrat:ital@0;1&family=Sacramento&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>TinDog</title>
+  <!-- CSS only -->
+  <!-- icons -->
+  <script src="https://kit.fontawesome.com/1c9ad4b785.js" crossorigin="anonymous"></script>
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap" rel="stylesheet"> 
+  <!-- personal css stylesheet -->
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!-- JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <h1><em>I'm Hung.</em></h1>
-        <h2>a <span class="pro">pro</span>grammer</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+
+  <section id="title">
+
+    <!-- Nav Bar -->
+    <div class="container-fluid">
+
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="">tindog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="#footer">Contact</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#pricing">Pricing</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#cta">Download</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- Title -->
+      <div class="row">
+
+        <div class="col-lg-6">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+        </div>
+
+        <div class="col-lg-6 title-img-container">
+          <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
+
+      </div>
     </div>
-    <div class="middle-container">
-        <div class="profile">
-          <img class="profile-img" src="images/my-profile-picture.jpg" alt="profile-img">
-          <h2>Hello.</h2>
-          <p>I am an aspiring Web Developer and Machine Learning Engineer. I like music 🎹 and a slow-paced life 🏕.</p>
+    
+  </section>
+
+
+  <!-- Features -->
+
+  <section id="features">
+
+    <!-- <div class="container-fluid"> -->
+      <div class="row">
+        <div class="col-lg-4 feature-box">
+          <i class="fas fa-check-circle fa-4x feature-icon"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
         </div>
-        <hr>
-        <div class="skills">
-          <h2>My Skills.</h2>
-          <div class="skill-row">
-            <img class="first-skill-img" src="images/coding.png" alt="coding-img">
-            <h3>Programming</h3>
-            <p>I recently started to learn programming 💻 in university. Over time, I have developed a passion for Web Development & Machine Learning.</p>
-          </div>
-          <div class="skill-row">
-            <img class="second-skill-img" src="images/music.png" alt="music-img">
-            <h3>Music</h3>
-            <p>I am interested in learning new instruments 🎸 on my own. Over time, I have been able to play a few songs on each instrument.</p>
-          </div>
+        <div class="col-lg-4 feature-box">
+          <i class="fas fa-bullseye fa-4x feature-icon"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
         </div>
-        <hr>
-        <div class="contact-me">
-          <h2>Get In Touch</h2>
-          <h3 class="contact-service">For projects related to creating fullstack personalised websites.</h3>
-          <p>Or let's just make friends and share knowledge on coding together!</p>
-          <a class="btn" href="mailto:E0323236@u.nus.edu">CONTACT ME</a>
+        <div class="col-lg-4 feature-box">
+          <i class="fas fa-heart fa-4x feature-icon"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
-      <div class="bottom-container">
-        <a class="footer-link" href="www.linkedin.com/in/quoc-hung-nham">LinkedIn</a>
-        <a class="footer-link" href="https://github.com/nhamhung">GitHub</a>
-        <a class="footer-link" href="https://nhamhung.github.io/CV/">Website</a>
-        <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
-          & <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
-        <p class="copyright">© 2020 Quoc Hung Nham.</p>
+    <!-- </div> -->
+  </section>
+
+
+  <!-- Testimonials -->
+
+  <section id="testimonials">
+
+    <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <img class="testimonial-img" src="images/linh.png" alt="dog-profile">
+            <img class="testimonial-img" src="images/linh.jpg" alt="dog-profile">
+            <em>Dieu Linh, Shanghai</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I used to be so lonely, but with TinDog's help, I've found the love of my life. I think. Gâu Gâu.</h2>
+            <img class="testimonial-img" src="images/uyen.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/uyen.jpg" alt="dog-profile">
+            <em>Han Uyen, Ha Noi</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I have used Tindog for a while and I must say, I really like the Pitbull. They are my bad boys.</h2>
+            <img class="testimonial-img" src="images/truc.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/truc.jpg" alt="dog-profile">
+            <em>Truc, Thai Nguyen</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">With Tindog I can date so many breeds at the same time. I'm still waiting for my Chihuahua to reply my text.</h2>
+            <img class="testimonial-img" src="images/phong.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/phong.jpg" alt="dog-profile">
+            <em>Phong, An Phu</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I think Poodle are cute. But a Shiba recently slided into my DM and he's got my heart.</h2>
+            <img class="testimonial-img" src="images/my.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/my.jpg" alt="dog-profile">
+            <em>My, Saitama</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I'm a Golden Retriever and the smartest of all dogs. As such, I only date smart dogs like the Husky, Dobermann or Chow Chow.</h2>
+            <img class="testimonial-img" src="images/ma.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/ma.jpg" alt="dog-profile">
+            <em>Mai Anh, Tokyo</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I have dreamt of this app for years. I can now talk to all those tall handsome muscular Tibetan Mastiff.</h2>
+            <img class="testimonial-img" src="images/klinh.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/klinh.jpg" alt="dog-profile">
+            <em>Khanh Linh, Home</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I'm a tall and handsome Greyhound looking for a loyal partner. FWBs and ONS only.</h2>
+            <img class="testimonial-img" src="images/an.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/an.jpg" alt="dog-profile">
+            <em>An, Vinhomes</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">Thank you Tindog for giving my dogs a place to find love. I love my dogs.</h2>
+            <img class="testimonial-img" src="images/hung.png" alt="lady-profile">
+            <img class="testimonial-img" src="images/hung.jpg" alt="lady-profile">
+            <em>Hung, Owner</em>
+          </div>
       </div>
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+      </a>
+  </div>
+  </section>
+
+
+  <!-- Press -->
+
+  <section id="press">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+
+  </section>
+
+
+  <!-- Pricing -->
+
+  <section id="pricing">
+
+    <h2>A Plan for Every Dog's Needs</h2>
+    <p>Simple and affordable price plans for your and your dog.</p>
+
+    <div class="row">
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+        
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Call to Action -->
+
+  <section id="cta">
+
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-lg btn-dark download-button" type="button"><i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-lg btn-outline-light download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+
+  </section>
+
+
+  <!-- Footer -->
+
+  <footer id="footer">
+    <i class="social-icon fab fa-facebook-f"></i>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon fab fa-instagram"></i>
+    <i class="social-icon fas fa-envelope"></i>
+    <p>© Copyright 2020 TinDog</p>
+  </footer>
+
+
 </body>
+
 </html>
