--- a/TinDog-Start-master/index.html
+++ b/TinDog-Start-master/index.html
@@ -111,13 +111,13 @@
             <em>Han Uyen, Ha Noi</em>
           </div>
           <div class="carousel-item">
-            <h2 class="testimonial-text">I have used Tindog for a while and I must say, I really like the Pitbull. They are my bad boys.</h2>
+            <h2 class="testimonial-text">I have used Tindog for a while and I must say, this app freaking slaps. The only problem is I don't know what to choose, chó ta or chó tây?.</h2>
             <img class="testimonial-img" src="images/truc.png" alt="lady-profile">
             <img class="testimonial-img" src="images/truc.jpg" alt="dog-profile">
             <em>Truc, Thai Nguyen</em>
           </div>
           <div class="carousel-item">
-            <h2 class="testimonial-text">With Tindog I can date so many breeds at the same time. I'm still waiting for my Chihuahua to reply my text.</h2>
+            <h2 class="testimonial-text">With Tindog I no longer have to pee everywhere to attract potential partners. I'm still waiting for my Chihuahua to reply my text.</h2>
             <img class="testimonial-img" src="images/phong.png" alt="lady-profile">
             <img class="testimonial-img" src="images/phong.jpg" alt="dog-profile">
             <em>Phong, An Phu</em>
