--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -70,25 +70,25 @@
 
   <section id="features">
 
-    <!-- <div class="container-fluid"> -->
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 feature-box">
           <i class="fas fa-check-circle fa-4x feature-icon"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
         <div class="col-lg-4 feature-box">
           <i class="fas fa-bullseye fa-4x feature-icon"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-title">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="col-lg-4 feature-box">
           <i class="fas fa-heart fa-4x feature-icon"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
-    <!-- </div> -->
+    </div>
   </section>
 
 
@@ -98,55 +98,55 @@
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-          <div class="carousel-item active">
-            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <div class="carousel-item active container-fluid">
+            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class="testimonial-img" src="images/linh.png" alt="dog-profile">
             <img class="testimonial-img" src="images/linh.jpg" alt="dog-profile">
             <em>Dieu Linh, Shanghai</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I used to be so lonely, but with TinDog's help, I've found the love of my life. I think. Gâu Gâu.</h2>
             <img class="testimonial-img" src="images/uyen.png" alt="lady-profile">
             <img class="testimonial-img" src="images/uyen.jpg" alt="dog-profile">
             <em>Han Uyen, Ha Noi</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I have used Tindog for a while and I must say, I really like the Pitbull. They are my bad boys.</h2>
             <img class="testimonial-img" src="images/truc.png" alt="lady-profile">
             <img class="testimonial-img" src="images/truc.jpg" alt="dog-profile">
             <em>Truc, Thai Nguyen</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">With Tindog I can date so many breeds at the same time. I'm still waiting for my Chihuahua to reply my text.</h2>
             <img class="testimonial-img" src="images/phong.png" alt="lady-profile">
             <img class="testimonial-img" src="images/phong.jpg" alt="dog-profile">
             <em>Phong, An Phu</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I think Poodle are cute. But a Shiba recently slided into my DM and he's got my heart.</h2>
             <img class="testimonial-img" src="images/my.png" alt="lady-profile">
             <img class="testimonial-img" src="images/my.jpg" alt="dog-profile">
             <em>My, Saitama</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I'm a Golden Retriever and the smartest of all dogs. As such, I only date smart dogs like the Husky, Dobermann or Chow Chow.</h2>
             <img class="testimonial-img" src="images/ma.png" alt="lady-profile">
             <img class="testimonial-img" src="images/ma.jpg" alt="dog-profile">
             <em>Mai Anh, Tokyo</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I have dreamt of this app for years. I can now talk to all those tall handsome muscular Tibetan Mastiff.</h2>
             <img class="testimonial-img" src="images/klinh.png" alt="lady-profile">
             <img class="testimonial-img" src="images/klinh.jpg" alt="dog-profile">
             <em>Khanh Linh, Home</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I'm a tall and handsome Greyhound looking for a loyal partner. FWBs and ONS only.</h2>
             <img class="testimonial-img" src="images/an.png" alt="lady-profile">
             <img class="testimonial-img" src="images/an.jpg" alt="dog-profile">
             <em>An, Vinhomes</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">Thank you Tindog for giving my dogs a place to find love. I love my dogs.</h2>
             <img class="testimonial-img" src="images/hung.png" alt="lady-profile">
             <img class="testimonial-img" src="images/hung.jpg" alt="lady-profile">
@@ -178,7 +178,7 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
@@ -188,7 +188,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -203,7 +203,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -218,7 +218,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -234,22 +234,24 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-lg btn-dark download-button" type="button"><i class="fab fa-apple"></i> Download</button>
-    <button class="btn btn-lg btn-outline-light download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
-
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn btn-lg btn-dark download-button" type="button"><i class="fab fa-apple"></i> Download</button>
+      <button class="btn btn-lg btn-outline-light download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
+  </div>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="social-icon fab fa-facebook-f"></i>
-    <i class="social-icon fab fa-twitter"></i>
-    <i class="social-icon fab fa-instagram"></i>
-    <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright 2020 TinDog</p>
+    <div class="container-fluid">
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+      <p>© Copyright 2020 TinDog</p>
+    </div>
   </footer>
 
 
